# Bubble-sheet

./: pyproject.toml
bubble_sheet/: main.py  utils.py
